# ResourceMonitorServer

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  Makefile  PRD_Phase0_Foundation.md  README.md  SCHEMA.md  pyproject.toml
docs/: ADMIN-UI-LEGIBILITY.md  DOCKER_BUILD.md  PHASE2-3-PLAN.md  p7-rollout-runbook.md  resource-monitor-email-template-architecture.md  resource-monitor-email-template-editor-ui.md  resource-monitor-email-template-tdd-plan.md  resource-monitor-profile-playground.html  resource-monitor-schema-guide.html  rms-cadence-reconcile-webmanager-ui-handoff-2026-06-11.md  rms-email-erb-hardening-webmanager-handoff.md  rms-email-group-routing-decision-2026-06-14.md  rms-enabled-rulelevel-decision-2026-06-15.md  rms-profile-registration-rules-decision-2026-06-19.md  schema-xcheck-report.md  windows-local-setup.md
docs/archive/: phase0-plan-v6.md
k8s/: configmap.yaml  deployment.yaml  pdb.yaml  secret.yaml.example  service.yaml
scripts/: build-image.ps1  build-image.sh  build-package.ps1  build-package.sh  create-profile-collection.ps1  seed-template-catchall.ps1
src/: logging_config.py  main.py  middleware.py
src/alert/: body_renderer.py  email_client.py  models.py  tokens.py
src/analyzer/: alert_builder.py  engine.py  es_parser.py  fact_catalog.py  metric_resolver.py  threshold.py
src/api/: admin.py  deps.py  health.py  metrics.py  profiles.py
src/cache/: cooldown.py  redis_client.py
src/db/: client.py  (+3 more)
tests/: conftest.py  xcheck_build_report.py  xcheck_support.py
tools/: __init__.py  alert_scenarios.py  create_collection.py  email_mock.py  mock_email_server.py  seed_template_catchall.py  send_test_alert.py
(+73 files in other folders)
