[project]
name = "resource-monitor-server"
version = "0.1.0"
description = "Factory PC resource monitoring server (Phase 0 foundation)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "elasticsearch[async]>=7.11.0,<8.0.0",
    "motor>=3.3.0",
    "apscheduler>=3.10.0,<4.0.0",
    "kazoo>=2.9.0,<2.11.0",
    "redis[hiredis]>=4.5.0,<5.1.0",
    "httpx>=0.27.0",
    "structlog>=24.0.0",
    "prometheus-client>=0.20.0",
    "cachetools>=5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "pytest-watch>=4.2.0",
    "pytest-xdist>=3.5.0",
    "time-machine>=2.13.0",
    "testcontainers[mongodb,redis,elasticsearch]>=4.0.0",
    "asgi-lifespan>=2.1.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
markers = [
    "unit: mock-based unit tests (fast)",
    "integration: testcontainers-based",
    "e2e: multi-instance scenarios",
    "slow: >10s",
]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
